Jul 24, 2020
  -GeneReactivator module has been moved to 'gene-ncbi' project

Jul 07, 2020
  -gene name/symbol changes & nomenclature events are suppressed for genes with nomen source not set to 'NCBI'
  -added support to load latest bonobo assembly 'Mhudiblu_PPA_v0'

Jun 23, 2020
  -human genes: incoming obsolete HGNC IDs are skipped from processing

Jun 17, 2020
  -non-rat genes: gene matching: added 3rd step matching by Ensembl Gene Ids

Jun 16, 2020
  -eg_ids_from_file option extended to allow new gene processing

Apr 20, 2020
  refactored code for handling xdb ids for genes; duplicate HGNC IDs are no longer inserted
    (when incoming HGNC ID is already assigned to different gene, it won't be inserted)

Mar 23, 2020
  fix in how to get primary ref assemblies

Feb 27, 2020
  fixed counts of XDB IDS deleted/inserted/matched (count double was reported)

Feb 26, 2020
  added loading of VGNC ids
  during typical work hours the duration between consequtive requests to NCBI EUTILS is doubled

Feb 07, 2020
  cytoband logic updated: fishband field is now mandatory for loading
  removed support for discontinued MAPS_DATA.BAND_TYPE field
  suppress nomenclature events for genes with NOMEN_SOURCE=HGNC

Feb 06, 2020
  inserted genes have 'gene_source' set to 'NCBI'
  updated dependency for oracle jdbc driver
  gene associations: added support for green monkey and naked mole rat

Jan 23, 2020
  added support for new species Naked Mole-Rat

Jan 22, 2020
  added support for new species Vervet (green monkey)

Dec 04, 2019
  code to delete redundant gene aliases have been moved to DataQcPipeline

Nov 26, 2019
  rat genes are loaded regardless of presence of sequences

Nov 25, 2019
  updated script for loading mitochondrial genes

Nov 22, 2019
  -for non-rat species: qc checks relaxed and new genes are loaded regardless if sequences are present or not
       also no sequence checking is performed, so sequences are always updated