@@ -1,3 +1,6 @@
+Aug 05, 2020
+  -qc: fix: Ensembl transcripts are no longer removed from genes
+
 Jul 24, 2020
   -GeneReactivator module has been moved to 'gene-ncbi' project
 
